# ssd_ros

./: .gitignore  SSDDetect.launch  greeter.launch  ssddetect.launch
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/beginner_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
devel/include/ssddetect/: BoundingBox.h  BoundingBoxes.h
devel/lib/beginner_tutorials/: add_two_ints_client  add_two_ints_server  img_sub  listener  talker
devel/lib/pkgconfig/: beginner_tutorials.pc  ssddetect.pc
devel/lib/python2.7/dist-packages/ssddetect/msg/: _BoundingBox.py  _BoundingBoxes.py
devel/lib/ssddetect/: ssddetect
devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
devel/share/common-lisp/ros/ssddetect/msg/: BoundingBox.lisp  BoundingBoxes.lisp  _package.lisp  _package_BoundingBox.lisp  _package_BoundingBoxes.lisp  ssddetect-msg.asd
devel/share/gennodejs/ros/ssddetect/msg/: BoundingBox.js  BoundingBoxes.js
devel/share/roseus/ros/beginner_tutorials/: manifest.l
devel/share/roseus/ros/ssddetect/: manifest.l
devel/share/roseus/ros/ssddetect/msg/: BoundingBox.l  BoundingBoxes.l
devel/share/ssddetect/cmake/: ssddetect-msg-extras.cmake  ssddetect-msg-paths.cmake  ssddetectConfig.cmake
src/SSDdetect/: CMakeLists.txt  main.cc
src/SSDdetect/config/: cameraParams.yaml  facenet.yaml  gaussian_person_face.yaml  gaussian_person_ncs.yaml  gaussian_person_ssd_ncs.yaml  ros.yaml  tiny-yolo-voc_ncs.yaml
src/SSDdetect/include/: SSD_Detector.hpp  camera.h  connect.h  facenet.h  fp16.h  image_interface.h  ncs_param.h  stb_image_resize.h
src/SSDdetect/src/: SSD_Detector.cpp  facenet.cpp  fp16.c  image_interface.cpp  ncs_param.cpp
src/SSDdetect/ssd_network_config/graph/: gaussian_person_face_graph  gaussian_person_graph
src/beginner_tutorials/: CMakeLists.txt
src/beginner_tutorials/cbuild/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/beginner_tutorials/cbuild/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/beginner_tutorials/cbuild/catkin_generated/installspace/: beginner_tutorials.pc  beginner_tutorialsConfig.cmake
src/beginner_tutorials/cbuild/cmake/: beginner_tutorials-genmsg-context.py  beginner_tutorials-genmsg.cmake
src/beginner_tutorials/cbuild/devel/: .catkin  .rosinstall  setup.sh
src/beginner_tutorials/cbuild/devel/include/beginner_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
src/beginner_tutorials/cbuild/devel/lib/beginner_tutorials/: add_two_ints_client  add_two_ints_server  img_sub  listener  talker
src/beginner_tutorials/cbuild/devel/lib/pkgconfig/: beginner_tutorials.pc
src/beginner_tutorials/cbuild/devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-extras.cmake  beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
src/beginner_tutorials/cbuild/devel/share/roseus/ros/beginner_tutorials/: manifest.l
src/beginner_tutorials/cbuild/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/beginner_tutorials/cbuild/gtest/gtest/: CTestTestfile.cmake  Makefile
src/beginner_tutorials/scripts/: add_two_ints_server.py  camera_listener_seg.py  camera_listener_ssd.py  camera_talker_seg.py  camera_talker_ssd.py  image_listener_seg.py  image_listener_seg_mobilenet_ncsv2.py  image_talker_seg.py  vis.py
src/beginner_tutorials/src/: img_sub.cpp  talker.cpp
